2017-11-14 version 0.1.0
* The first release of ExaGeoStat-R
