@@ -1,7 +1,9 @@
 useDynLib(exageostat)
 export(TestWrapper)
-export(exageostat_gen_zR)
-export(exageostat_likelihoodR)
+export(gen_z_exactR)
+export(mle_exactR)
+export(mle_tlrR)
+export(mle_dstR)
 export(exageostat_initR)
 export(exageostat_finalizeR)
 
